--- a/index.html
+++ b/index.html
@@ -24,33 +24,33 @@
 <!-- Chunks of bootstrap borrowed from https://blackrockdigital.github.io/startbootstrap-stylish-portfolio/ -->
   <body>
     <!-- Header -->
-    <header class="masthead d-flex" id=intro>
-      <div class="container text-center my-auto">
-        <h1 class="mb-1">How easy it is to move in NYC?</h1>
+    <header class="masthead d-flex" id="page-top">
+      <div class="container text-center my-auto" id=intro>
+        <h1 class="mb-1" >How easy it is to move in NYC?</h1>
         <h3 class="mb-5">
           <em>Life is complex trying to get to work, school, or home in a city of millions... even more if you use a wheelchair.</em>
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#subway-map">Find Out More</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#subway-map">Find out more</a>
       </div>
       <div class="overlay"></div>
     </header>
 
     <!-- Map -->
-    <section id="subway-map" class="map">
-
-      <!-- <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-      <br/>
-      <small>
-        <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-      </small> -->
+    <section class="map" id="subway-map">
+      <div id="subway-map">
+      </div>
     </section>
 
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+      <i class="fa fa-angle-up"></i>
+    </a>
 
 <!-- ***************** SCRIPTS ***************-->
     <!-- leaflet map script -->
-      <script src="//unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+    <script src="//unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <!-- jquery code -->
-      <script src="//code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <!-- Popper.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!--Bootstrap JS -->
