--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!-- Header -->
     <header class="masthead d-flex" id="page-top">
       <div class="container text-center my-auto" id=intro>
-        <h1 class="mb-1" >How easy it is to move in NYC?</h1>
+        <h1 class="mb-1" >The subway is essential for NYC</h1>
         <h3 class="mb-5">
-          <em>Life is complex trying to get to work, school, or home in a city of millions... even more if you use a wheelchair.</em>
+          <em>(but if you use a wheelchair, it may be out of reach) </em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#subway-map">Find out more</a>
       </div>
