success in layers!
Missing buttons
Fix width of containers
Fix sidebar
Add popup messages

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ul>
     </nav>
 
-    <!-- Header -->
+    <!-- Cover, landing page -->
     <header class="masthead d-flex" id="page-top">
       <div class="container text-center my-auto" id=cover>
         <h1 class="mb-1" id="title1">The subway is essential for NYC</h1>
