--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Panel with buttons/layers -->
     <div class="container text-center my-auto" id="panel">
       <p>Click on the different buttons to see how accessible is NYC through its subway.</p>
-      <div class="p1">
+      <div>
         <button class="btn btn-outline mb1 blue" id="btn-all">All Stations</button>
         <button class="btn btn-outline mb1 black" id="btn-ada">Accessible Stations</button>
         <button class="btn btn-outline mb1 navy" id="btn-n-ada">Not Accessible Stations</button>
