--- a/index.html
+++ b/index.html
@@ -1,130 +1,126 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- META -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A website to know more about accessibility to the NYC subway">
-    <meta name="author" content="Mariano Morán">
 
-<!-- ***************** ESTABLISHING STYLES ***************-->
-    <!-- leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin=""/>
+<head>
+  <!-- META -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="A website to know more about accessibility to the NYC subway">
+  <meta name="author" content="Mariano Morán">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+  <!-- ***************** ESTABLISHING STYLES ***************-->
+  <!-- leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
-    <title>Accessible NYC</title>
-  </head>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+  <title>Accessible NYC</title>
+</head>
 
 <!-- ***************** PAGE ***************-->
 <!-- Chunks of bootstrap adapted from https://blackrockdigital.github.io/startbootstrap-stylish-portfolio/ -->
-  <body>
-    <!-- Navigation Bar-->
-    <a class="menu-toggle rounded" href="#">
+
+<body>
+  <!-- Navigation Bar-->
+  <a class="menu-toggle rounded" href="#">
       <i class="fa fa-bars"></i>
     </a>
-    <nav id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#page-top">Accessible NYC Subway</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#intro">Subway Coverage</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#subway-map">Accessible Stations</a>
-        </li>
-        <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#contact">Contact</a>
-        </li>
-        </li>
-      </ul>
-    </nav>
+  <nav id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <li class="sidebar-brand">
+        <a class="js-scroll-trigger" href="#page-top">Accessible NYC Subway</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#intro">Subway Coverage</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#subway-map">Accessible Stations</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#contact">Contact</a>
+      </li>
+      </li>
+    </ul>
+  </nav>
 
-    <!-- Cover, landing page -->
-    <header class="masthead d-flex" id="page-top">
-      <div class="container text-center my-auto" id=cover>
-        <h1 class="mb-1" id="title1">The subway is essential for NYC</h1>
-        <h3 class="mb-5" id="paragraph">
+  <!-- Cover, landing page -->
+  <header class="masthead d-flex" id="page-top">
+    <div class="container text-center my-auto" id=cover>
+      <h1 class="mb-1" id="title1">The subway is essential for NYC</h1>
+      <h3 class="mb-5" id="paragraph">
           <em>(but if you use a wheelchair, it may be out of reach) </em>
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#intro">Find out more</a>
-      </div>
-      <div class="overlay"></div>
-    </header>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#intro">Find out more</a>
+    </div>
+    <div class="overlay"></div>
+  </header>
 
-    <!-- Intro -->
-    <section class="container text-center my-auto" id="intro" >
+  <!-- Intro -->
+  <header class="masthead d-flex" id="intro">
+    <section class="container text-center my-auto">
       <h3 class="mb-5" id="paragraph"> <p>XXX of New Yorkers use the subway every day. <br><br>
         xxx% of the residential units in NYC is within walking distance of a subway station...</p>
       </h3>
       <a class="btn btn-primary bg-black btn-xl js-scroll-trigger" href="#subway-map">... but what if you can't walk?</a>
     </section>
-
-    <!-- Map -->
-    <section class="map" id="subway-map">
-      <div id="subway-map">
-      </div>
-    </section>
-
-    <!-- Panel with buttons/layers -->
-    <div class="container text-center my-auto" id="panel">
-      <p>Click on the different buttons to see how accessible is NYC through its subway.</p>
-      <div>
-        <button class="btn btn-outline mb1 blue" id="btn-all">All Stations</button>
-        <button class="btn btn-outline mb1 black" id="btn-ada">Accessible Stations</button>
-        <button class="btn btn-outline mb1 navy" id="btn-n-ada">Not Accessible Stations</button>
-      </div>
+  </header>
+  <!-- Map -->
+  <section class="map" id="subway-map">
+    <div id="subway-map">
     </div>
+  </section>
 
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+  <!-- Panel with buttons/layers -->
+  <header class="masthead d-flex" id="panel">
+    <div>
+      <p>Click on the different buttons to see how accessible is NYC through its subway.</p><br><br>
+    </div>
+    <br>
+    <div>
+      <button class="btn btn-outline btn-ada mb1 black" id="btn-ada">Only Accessible Stations</button>
+      <button class="btn btn-outline btn-nada mb1 navy" id="btn-nada">Only Not Accessible Stations</button>
+      <button class="btn btn-outline btn-all mb1 blue" id="btn-all">All Stations</button>
+      <button class="btn btn-outline btn-lines mb1 blue" id="btn-lines">All Subway Lines</button>
+    </div>
+  </header>
+
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
       <i class="fa fa-angle-up"></i>
     </a>
 
-<!-- ***************** SCRIPTS ***************-->
-    <!-- leaflet map script -->
-    <script src="//unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  <!-- ***************** SCRIPTS ***************-->
+  <!-- leaflet map script -->
+  <script src="//unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
-    <!-- jquery code -->
-    <script src="//code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+  <!-- jquery code -->
+  <script src="//code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-    <!-- Popper.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
+  <!-- Popper.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-    <!--Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+  <!--Bootstrap JS -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- script -->
-    <script src="js/scripts.js"></script>
+  <!-- script -->
+  <script src="js/scripts.js"></script>
 
-  </body>
+</body>
+
 </html>
