--- a/index.html
+++ b/index.html
@@ -116,23 +116,21 @@
 
   <!-- last Page -->
   <div id="last-page">
-    <div class="container text-center my-auto">
+    <div class="paragraph container text-center my-auto">
 
-      2017 Paratransit Customer Satisfaction Study Access-A-Ride. NYC Transit.
-
-
-      <p></p>
+      <h2>2017 Paratransit Customer Satisfaction Study Access-A-Ride. NYC Transit.</h2>
+      <p style= font-size:16px>
       <li><a target="_blank" href="http://web.mta.info/accessibility/">Guide to Accessible Transit</a><br> </li>
       <li><a target="_blank" href="http://bustime.mta.info/">Is your bus running late?</a><br></li>
       <a target="_blank" href="http://web.mta.info/mta/eles.html">Which stations' elevators are working?</a><br>
       <a target="_blank" href="http://web.mta.info/nyct/paratran/guide.htm">Guide to register and book an<em>`Access-A-Ride`</em> trip</a><br>
+      <p>
       <hr>
     </div>
   </div>
   <div class="sources">
     <em><a target="_blank" href="http://furmancenter.org/files/sotc/SOC_2016_PART2_City_Borough_CD_Data.pdf">3. </a> State of New York City's Housing and Neighborhoods - 2016 Report. NYU Furman Center.</em><br>
   </div>
-<em><a target="_blank" href="http://furmancenter.org/files/sotc/SOC_2016_PART2_City_Borough_CD_Data.pdf">3. </a> State of New York City's Housing and Neighborhoods - 2016 Report. NYU Furman Center.</em><br>
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded js-scroll-trigger" href="#first">
