--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- Cover, landing page -->
   <div id="first">
-    <div class="container text-center my-auto">
+    <div class="paragraph text-center my-auto">
       <h1 class="title mb-1">Accessible NYC</h1>
       <h3 class="paragraph mb-5"><em>A look into how NYC Transit challenges seniors and disabled persons.</em></h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#second">Find out more</a>
@@ -67,12 +67,12 @@
 
   <!-- Intro -->
   <div id="second">
-    <div class="container text-center my-auto">
+    <div class="paragraph text-center my-auto">
       <h2 class="title"> NYC Public Transit is essential, but if you use a wheelchair, it may be out of reach! </h2>
       <hr>
-      <h4 class="paragraph mb-5"> <p>On 2016, 57% of New Yorkers used Public Transit to commute to work<sup>1</sup> <br>
-        and there was a daily average of +5 million trips on the subway, and +2 million on buses. <sup>2</sup><br>
-        However, 10% of NYC's population has some disability, and 13% of population is above the age of 65.<br>
+      <h4 class="paragraph mb-5"> <p>On 2016, 57% of New Yorkers used Public Transit to commute to work<sup>1</sup> <br><br>
+        and there was a daily average of +5 million trips on the subway, and +2 million on buses. <sup>2</sup><br><br>
+        However, 10% of NYC's population has some disability, and 13% of population is above the age of 65.<br><br>
         How bumpy is the commute for these New Yorkers?</p>
       </h4><hr>
       <a class="btn btn-primary bg-black btn-xl js-scroll-trigger" href="#subway-map">Take a look!</a>
@@ -121,10 +121,10 @@
 
   <!-- last Page -->
   <div id="last-page">
-    <div class="container text-center my-auto">
+    <div>
       <h2 class=title>2017 Paratransit Customer Satisfaction Study Access-A-Ride. NYC Transit.</h2>
-      <div class="paragraph"> <p style= font-size:18px>
-          Even though 82% of the NYC population is within a 1/2 mile of a subway station, only 25% of the stations are accessible to wheelchairs.<br>
+      <div class="paragraph my-auto"> <p style= font-size:18px>
+          Even though 82% of the NYC population is within a 1/2 mile of a subway station, only 25% of the stations are accessible to wheelchairs.<sup>1</sup><br>
           Additionally,<br>
           This limits<br>
           The list below lists<br>
@@ -138,7 +138,7 @@
       <hr>
       </div>
       <div class="sources">
-        <em><a target="_blank" href="http://furmancenter.org/files/sotc/SOC_2016_PART2_City_Borough_CD_Data.pdf">3. </a> State of New York City's Housing and Neighborhoods - 2016 Report. NYU Furman Center.</em><br>
+        <em><a target="_blank" href="http://furmancenter.org/files/sotc/SOC_2016_PART2_City_Borough_CD_Data.pdf">1. </a> State of New York City's Housing and Neighborhoods - 2016 Report. NYU Furman Center.</em><br>
         <em>Photo: Charles Eckert</em>
       </div>
     </div>
