--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#first">Accessible NYC</a>
+        <a class="js-scroll-trigger" style:'color:#fff' href="#first">Accessible NYC</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#second">Subway Coverage</a>
@@ -47,16 +47,15 @@
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#last-page">Resources</a>
       </li>
-        fnajnclka
     </ul>
   </nav>
 
   <!-- Cover, landing page -->
   <div id="first">
     <div class="paragraph text-center my-auto">
-      <h1 class="shaded-text">Accessible NYC</h1>
+      <h1 class="shaded-text" style='margin-bottom:20px'>Accessible NYC </h1>
       <h3 class="shaded-text paragraph mb-5"><em>A look into how NYC Transit challenges seniors and disabled persons.</em></h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#second">Find out more</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#second">Find out more <i class="fa fa-arrow-down" aria-hidden="true"></i></a>
       <hr>
     </div>
     <div class="sources">
@@ -70,12 +69,12 @@
     <div class="paragraph text-center my-auto">
       <h2 class="shaded-text"> NYC Public Transit is essential, but if you use a wheelchair, it may be out of reach! </h2>
       <hr>
-      <h4 class="shaded-text mb-5"> <p>On 2016, 57% of New Yorkers used Public Transit to commute to work<sup>1</sup> <br><br>
-        and there was a daily average of +5 million trips on the subway, and +2 million on buses. <sup>2</sup><br><br>
-        However, 10% of NYC's population has some disability, and 13% of population is above the age of 65.<br><br>
+      <h5 class="shaded-text mb-5"> <p>In 2016, 57% of New Yorkers used Public Transit to commute to work<sup>1</sup> <br><br>
+        and there was a daily average of over 5 million trips on the subway, and more than 2 million on buses. <sup>2</sup><br><br>
+        However, 10% of NYC's population has some disability, and 13% of the population is above the age of 65.<br><br>
         How bumpy is the commute for these New Yorkers?</p>
-      </h4><hr>
-      <a class="btn btn-primary bg-black btn-xl js-scroll-trigger" href="#subway-map">Take a look!</a>
+      </h5><hr>
+      <a class="btn btn-primary bg-black btn-xl js-scroll-trigger" href="#subway-map">Take a look!  <i class="fa fa-arrow-down" aria-hidden="true"></i></a>
       <hr>
       <div class="sources">
         <em><a target="_blank" href="https://factfinder.census.gov/faces/nav/jsf/pages/searchresults.xhtml?refresh=t">1. </a>Means of transportation to work. American Community Survey.</em><br>
@@ -97,13 +96,13 @@
     <div class="paragraph shaded-text text-center my-auto" style='font-size:18px' id=panel-body>
       <p>Use the buttons to see all the subway stations or only the accessible ones. Hover over a station to view accessibility detail.</p>
     </div>
-      <div class="btn-group" style='margin-left:40%' style='margin-right:40%'>
+      <div class="btn-group" style='margin-left:40%' style='margin-right:60%'>
         <button class="btn btn-outline btn-all" id="btn-all">All Subway Stations</button>
         <button class="btn btn-outline btn-ada" id="btn-ada">Accessible Stations</button>
         <!-- <button class="btn btn-outline btn-nada" id="btn-nada">Not Accessible Stations</button> -->
       </div>
-      <div style='margin-left:47%' style='margin-right:50%'>
-        <a class="btn btn-primary js-scroll-trigger" href="#last-page">Find out more</a>
+      <div style='margin-left:80%'>
+        <a class="btn btn-primary js-scroll-trigger" style='font-size:14px' href="#last-page">Find out more <i class="fa fa-arrow-down" aria-hidden="true"></i> </a>
       </div>
   </div>
 
